# sports-image-classification

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/logging/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
src/sports_classifier/: convert_to_onnx.py  save_mlflow_model.py  train.py
src/sports_classifier/data_load/: dataset.py
src/sports_classifier/models/: model.py
src/sports_classifier/scripts/: generate_plots.py  predict.py
