[tool.poetry]
name = "sports-image-classification"
version = "0.1.0"
description = "MLOps project for classification different sport images"
authors = ["Zolotarev Sergei"]
license = "MIT"
readme = "README.md"
packages = [{include = "sports_classifier", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
kaggle = "^2.0.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
pytorch-lightning = "^2.6.1"
hydra-core = "^1.3.2"
mlflow = "^3.10.1"
dvc = "^3.67.0"
onnx = "^1.20.1"
onnxruntime = "^1.24.3"
pillow = "^12.1.1"
cloudpickle = "^3.1.2"
matplotlib = "^3.10.8"
requests = "^2.32.5"
pandas = "2.2.3"
pyarrow = "20.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
